[gd_scene load_steps=9 format=2]

[ext_resource path="res://素材/对话框.png" type="Texture" id=1]
[ext_resource path="res://素材/FZXIANGSU16.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://脚本/对话框2.gd" type="Script" id=3]
[ext_resource path="res://素材/按键选择2.mp3" type="AudioStream" id=4]
[ext_resource path="res://脚本/talks.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="对话框2" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="对话框" type="Sprite" parent="."]
position = Vector2( 512, 500 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 262.0
margin_top = 453.0
margin_right = 687.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 1 )
text = "
你输了吗？"
script = ExtResource( 5 )

[node name="Button_yes" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -10.0
margin_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "是"
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Button_no" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -243.0
margin_top = 16.0
margin_bottom = 39.0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "否"
align = 0

[node name="button_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="button_pressed"]
pause_mode = 2
wait_time = 0.5
__meta__ = {
"_editor_description_": "0.5秒结束之后自动暂停音乐播放"
}

[connection signal="again" from="." to="Label" method="_on_2_again_set_dialoge"]
[connection signal="pressed" from="Button_yes" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="Button_no" to="." method="_on_Button_no_pressed"]
[connection signal="timeout" from="button_pressed/Timer" to="." method="_on_Timer_timeout"]
